--- a/ec2TemplateDemo.yaml
+++ b/ec2TemplateDemo.yaml
@@ -14,12 +14,11 @@ Resources:
         Fn::Base64: 
           !Sub |
             #!/bin/bash
-            sudo su
-            sudo yum update -y
-            sudo yum install -y httpd.x86_64
-            sudo systemctl start httpd.service
-            sudo systemctl enable httpd.service
-            sudo echo ?Hello World from $(hostname -f)? > /var/www/html/index.html
+            yum update -y
+            yum install -y httpd.x86_64
+            systemctl start httpd.service
+            systemctl enable httpd.service
+            echo “Hello World from $(hostname -f)” > /var/www/html/index.html
 
   WebAppSecurityGroup:
     Type: AWS::EC2::SecurityGroup
