--- a/ec2TemplateDemo.yaml
+++ b/ec2TemplateDemo.yaml
@@ -34,6 +34,10 @@ Resources:
           FromPort: 443
           ToPort: 443
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 189.202.95.45/32
 
 
 
